Add GPL and maintainer info

--- a/templates/home.html
+++ b/templates/home.html
@@ -17,5 +17,7 @@
             <input type="file" name="data_file" />
             <input type="submit" value="Submit"/>
         </form>
+        <p>Please contact <strong>quizmakeradmin@protonmail.com</strong> if you have questions or receive an error.</p>
+        <p>GPL 3.0 -- <a href="https://github.com/bghull/quizmaker/">GitHub</a></p>
     </body>
 </html>
