Add HTML checkbox support, insert dummy text in empty questions

--- a/templates/home.html
+++ b/templates/home.html
@@ -16,8 +16,12 @@
         <br>
         <br>
         <form action="/download" method="post" enctype="multipart/form-data">
-            <input type="file" name="data_file" />
-            <input type="submit" value="Submit"/>
+            <input type="file" name="data_file">
+            <input type="submit" value="Submit">
+            <div>
+            <input type="checkbox" id="r3audio" name="r3audio" checked>
+            <label for="r3audio">Audio Round 3?</label>
+            </div>
         </form>
         <br>
         <h2>Changelog:</h2>
